Fix for Code in comments overflowing (#834)
* https://github.com/busyorg/busy/issues/771


* set max-width on comment pre tag

* remove max-width & set overflow on comment text container

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -99,7 +99,7 @@
   }
 
   pre {
-    overflow-y: auto;
+    overflow: auto;
     padding: 10px 20px;
     margin-bottom: 14px;
     line-height: 1em;
